# shopping_list

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package-lock.json  package.json
assets/: tailwind.css
assets/i18n/: en.ftl  es.ftl
src/: main.rs
src/components/: mod.rs  navbar.rs  toggle.rs
src/model/: database.rs  lista.rs  mod.rs
src/views/: home.rs  lista.rs  mod.rs
