[package]
name = "shopping_list"
version = "0.1.0"
authors = ["Juan Vásquez <jjvn84@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.2", features = ["router", "mobile", "html"] }
dioxus-material-icons = { version = "4.0.1" }
rusqlite = { version = "0.37.0", features = ["bundled", "serialize"] }
jni = "0.21"
anyhow = "1.0.97"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rusqlite_migration = "2.3.0"
dioxus-i18n = "0.5.0"
unic-langid = "0.9.6"
sys-locale = "0.3.2"


[features]
default = ["mobile"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
